@startuml
'https://plantuml.com/class-diagram

class tiGia{
+ void attach(thayDoiTiGia o)
+ void detach(thayDoiTiGia o)
+ void notify()
}
interface thayDoiTiGia{
    +void Update(float delta)
}
class nhaDauTuA
class nhaDauTuB

thayDoiTiGia <|.. nhaDauTuA
thayDoiTiGia <|.. nhaDauTuB

tiGia o--> "observer" thayDoiTiGia

nhaDauTuA --> tiGia
nhaDauTuB -->tiGia
@enduml